# RabbitmqSendRecv

./: CMakeLists.txt  send.cpp  send.h  test.cpp
